# fractalwords

./: ChangeLog.md  README.md  fractalwords.cabal
 c/: graphgrow_filter_frag.glsl
Graphgrow/: Main.hs  Utils.hs
Graphgrow/Engine/: Graph.hs  Grow.hs  Zoomer.hs
Graphgrow/GUI/: DrawPoints.hs
Graphgrow/Operator/: Graph.hs
data/data/: bible-pg10.gg2
fractalwords/ c/: graphgrow-filter.c  graphgrow_filter_vert.glsl  shader.c  shader.h
fractalwords/Graphgrow/Analysis/: Statisitcs.hs
fractalwords/Graphgrow/Engine/: Geometry.hs
fractalwords/data/data/: haskell-irc.gg2  netbehaviour.gg2
fractalwords/extra/: mk.hs
fractalwords/graphgrow3/: Audio.hs  README.md  Types.hs  compress~.pd  initial.frag  initial.vert
fractalwords/graphgrow3/audio/: Makefile  graphgrow-audio.cc
fractalwords/graphgrow3/iface/: README  iface.xcf
fractalwords/graphgrow3/video/: graphgrow-video-test.cc
graphgrow3/: Dimension.hs  Main.hs  Video.hs  colour.frag  colour.vert  edge~.pd  graphgrow3.cabal  graphgrow3.pd  pitchshift~.pd  rule~.pd  step.frag
graphgrow3/audio/: graphgrow-audio-test.cc
graphgrow3/iface/: Makefile  graphgrow-iface.cc
graphgrow3/video/: Makefile  graphgrow-video.cc
